--- a/runnerapp/package.json
+++ b/runnerapp/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-auth0": "^3.2.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
