--- a/runnerapp/package.json
+++ b/runnerapp/package.json
@@ -20,6 +20,7 @@
     "react-native-auth0": "^3.2.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-get-location": "^4.0.1",
+    "react-native-maps": "^1.15.1",
     "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.8.1",
