--- a/runnerapp/package.json
+++ b/runnerapp/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
@@ -20,6 +23,7 @@
     "react-native-auth0": "^3.2.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-get-location": "^4.0.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.15.1",
     "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
@@ -37,6 +41,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
